--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Alonaklzh.github.io/template",
+  "homepage": "https://cristiangarzon22.github.io/goit-js-11",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /template/"
+    "build": "parcel build src/*.html --public-url /goit-js-11/"
   },
   "repository": {
     "type": "git",
